--- a/src/scss/comps/_all.scss
+++ b/src/scss/comps/_all.scss
@@ -1,5 +1,5 @@
 @import './bgContent';
 @import './header';
 @import './form';
-// @import './sort';
+@import './gallery';
 // @import './pizza-block';
