--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -34,10 +34,12 @@ body {
 }
 
 .loading {
-  position: absolute;
-  top: 50px;
-  left: 50px;
   color: red;
+  width: 250px;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .position {
@@ -46,4 +48,23 @@ body {
   position: absolute;
   left: 50px;
   top: 50px;
+}
+
+.smooth-image {
+  transition: opacity 1s;
+}
+.image-visible {
+  opacity: 1;
+}
+.image-hidden {
+  opacity: 0;
+}
+
+.smooth-preloader {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
 }
