--- a/src/scss/comps/_form.scss
+++ b/src/scss/comps/_form.scss
@@ -8,7 +8,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
 
     .form-img__input-text {
       width: 100%;
@@ -17,7 +16,7 @@
       border: 1px solid #fff;
       outline: 0;
       color: #fff;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
   }
 
@@ -25,6 +24,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 15px;
     .form-img__wrapper-file {
       display: flex;
       .form-img__input-file {
@@ -36,12 +36,20 @@
         background: #fff;
         color: #000;
         text-transform: uppercase;
-        padding: 10px 20px;
+        padding: 10px 10px;
         display: inline-block;
         outline: 0;
         border: 0;
         cursor: pointer;
         font-size: 13px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        svg {
+          margin-right: 10px;
+          font-size: 20px;
+        }
       }
     }
 
@@ -55,5 +63,10 @@
       border: 0;
       cursor: pointer;
     }
+  }
+
+  .form-img__error {
+    font-size: 14px;
+    color: rgb(209, 209, 209);
   }
 }
