--- a/src/scss/comps/_gallery.scss
+++ b/src/scss/comps/_gallery.scss
@@ -7,6 +7,8 @@
     flex-flow: row wrap;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    margin-bottom: 100px;
 
     .main__images__item {
       flex: auto;
@@ -16,14 +18,30 @@
       .main__images__item__img {
         width: 100%;
         height: 330px;
+        z-index: 100;
         object-fit: cover;
         object-position: left top center;
       }
       .main__images__btn {
         position: absolute;
-        top: 0;
-        left: 0;
+        bottom: 20px;
+        right: 10px;
         z-index: 1;
+        font-size: 50px;
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        background-color: #fff;
+        border: none;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        svg {
+          color: #000;
+          pointer-events: none;
+          font-size: 30px;
+        }
       }
     }
   }
