--- a/src/scss/comps/_header.scss
+++ b/src/scss/comps/_header.scss
@@ -4,6 +4,7 @@
   background: rgba(0, 0, 0, 0.6);
   margin-bottom: 40px;
   padding-bottom: 60px;
+  height: 420px;
 
   .header__banner {
     padding-top: 80px;
