--- a/src/scss/comps/_all.scss
+++ b/src/scss/comps/_all.scss
@@ -2,4 +2,5 @@
 @import './header';
 @import './form';
 @import './gallery';
-// @import './pizza-block';
+@import './svgLoading';
+@import './_progressBar';
