--- a/src/scss/comps/_form.scss
+++ b/src/scss/comps/_form.scss
@@ -1,6 +1,6 @@
 .form-img {
-  margin-top: 40px;
-  width: 40%;
+  margin-top: 30px;
+  width: 50%;
   display: flex;
   flex-direction: column;
 
@@ -25,18 +25,21 @@
     align-items: center;
     justify-content: space-evenly;
     margin-bottom: 15px;
+
     .form-img__wrapper-file {
       display: flex;
+
       .form-img__input-file {
         opacity: 0;
         width: 0;
         height: 0;
       }
+
       .input__file-button-text {
         background: #fff;
         color: #000;
         text-transform: uppercase;
-        padding: 10px 10px;
+        padding: 10px 18px;
         display: inline-block;
         outline: 0;
         border: 0;
@@ -45,10 +48,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-right: 15px;
+        cursor: pointer;
+        position: relative;
+        transition: background 0.3s ease;
+        &:hover{
+          background: rgb(223, 223, 223);
+        }
 
         svg {
-          margin-right: 10px;
-          font-size: 20px;
+          margin-right: 8px;
+          font-size: 23px;
         }
       }
     }
@@ -57,11 +67,15 @@
       background: #fff;
       color: #000;
       text-transform: uppercase;
-      padding: 14px 20px;
+      padding: 14px 33px;
       display: inline-block;
       outline: 0;
       border: 0;
       cursor: pointer;
+      transition: background 0.3s ease;
+        &:hover{
+          background: rgb(223, 223, 223);
+        }
     }
   }
 
@@ -70,3 +84,6 @@
     color: rgb(209, 209, 209);
   }
 }
+
+
+
